# PubmedApi

./: README.md  papers.csv  papers1.csv  pyproject.toml  results.csv  results1.csv
src/pumbed_fetcher/: api.py  cli.py  main.py  processing.py  utils.py
