[tool.poetry]
name = "pumbed-fetcher"
version = "0.1.0"
description = "Fetch and process PubMed research papers"
authors = ["gitkrishna07 <misalesaikrishna07@gmail.com>"]
readme = "README.md"
packages = [{ include = "pumbed_fetcher", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.32.3"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.0.0"

[tool.poetry.scripts]
get-papers-list = "pumbed_fetcher.main:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

